# previta_service

./: .cursorignore  .dockerignore  .gitignore  Dockerfile  Makefile  clear-migrations.py  django-proxy.conf  django-static.conf  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  start-scheduler-dev.sh  start-scheduler.sh  start-service-dev.sh  start-service.sh  workspace.code-workspace
appointments/: filters.py  models.py  serializers.py  urls.py  views.py
appointments/migrations/: 0001_initial.py
authentication/: consumers.py  middlewares.py  serializers.py  urls.py  views.py
common/: admin.py  consumers.py  db_functions.py  exceptions.py  fields.py  filters.py  formatters.py  models.py  observers.py  openapi.py  permissions.py  serializers.py  storages.py  validators.py  views.py  widgets.py
common/migrations/: 0001_initial.py  0002_initial.py  0003_create_extension_unaccent.py
common/resources/: migration-queries.sql
common/utils/: __init__.py  audio.py  base.py  dict.py  document.py  file.py  image.py  requests.py  task.py  text.py  video.py
medications/: models.py  serializers.py  urls.py  views.py
medications/migrations/: 0001_initial.py
patches/: baileys-flags-patch.mjs  baileys-wrap-loader.mjs  fix-baileys-esm-wa.mjs  patch-and-run.sh  register-loader.mjs
residents/: models.py  serializers.py  urls.py  views.py
service/: apps.py  asgi.py  celery.py  consumers.py  db_router.py  settings.py  urls.py  wsgi.py
users/: admin.py  apps.py  consumers.py  content_types.py  models.py  serializers.py  urls.py  views.py
(+33 files in other folders)
